--- a/login.html
+++ b/login.html
@@ -16,12 +16,11 @@
     <div class="container">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-primary">
-                    <div class="panel-heading">Welcome!</div>
                     <div class="panel-heading">Login Page</div>
                     <div class="panel-body">
                     <form onsubmit="validate" action="last.html" id="registration">
-                            <label>Username</label>
-                            <input type="text" class="form-control" name="username" id="username" placeholder="Username" />
+                            <label>Email</label>
+                            <input type="email" class="form-control" name="email" placeholder="Email">
                             <br>
                             <label>Password</label>
                             <input type="password" class="form-control" id="password1" name="password1" placeholder="Password">
