--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="container">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-primary">
-                    <div class="panel-heading">Registration</div>
+                    <div class="panel-heading elave">Registration</div>
                     <div class="panel-body">
-                    <form onsubmit="validate" action="login.html" id="registration">
+                    <form onsubmit="validate" action="last1.html" id="registration">
                             <label>Firstname</label>
                             <input type="text" class="form-control" name="firstname" id="firstname" placeholder="Firstname" />
                             <br>
