--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-primary">
-                    <div class="panel-heading">Login Page</div>
+                    <div class="panel-heading elave">Login Page</div>
                     <div class="panel-body">
                     <form onsubmit="validate" action="last.html" id="registration">
                             <label>Email</label>
