--- a/last.html
+++ b/last.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="panel-heading extra" >You are logged in</div>
+    <div class="panel-heading extra" >You are logged in!</div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.js"></script>
